--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <p>This is a new repo</p>
   <p>I am working on Feature1 branch </p>
   <button>button2</button>
-  <button>button</button>
+  <button>button</button>\
+  <button>button3</button>
 </body>
 </html>
